--- a/site/app/stylesheets/_custom.scss
+++ b/site/app/stylesheets/_custom.scss
@@ -693,6 +693,9 @@ footer {
   padding-top: 35px;
   padding-bottom: 26px;
   }
+ 	#footer-nav a {
+ 		color: #666;
+ 		}
 #copyright {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -726,7 +729,7 @@ footer {
   color: #eee;
   }
 #copyright {
-  color: #eee;
+  color: #505050;
 	background-color: black;
   }
 .console-transition #footer-nav a,
