--- a/site/app/stylesheets/_type.scss
+++ b/site/app/stylesheets/_type.scss
@@ -1,4 +1,4 @@
-h1, h2, h3, h4, h5, .headline, .nav {
+h1, h2, h3, h4, h5, .headline, .nav, .secondary, .section-top {
 	font-family: $headerFontFamily;
 	font-weight: normal;
 	}
