--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -24,7 +24,7 @@ $openshiftMediumBackgroundGray: #343434; /* From screenshots, for nav */
 $openshiftDarkBackgroundGray:   #333; /* From screenshots, background of sign in link */
 $openshiftAlmostBlack:          #030303;
 $openshiftSeriouslyAlmostBlack: #010101;
-$openshiftLinkGray:             #c2c2c2; /* Used on the signup link */
+$openshiftLinkGray:             #505050; /* Used on the signup link */
 $openshiftBorderGray:           #b4b4b2; /* From screenshots */
 $genericLightGreen:             #d4e16b;
 
