--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -13,7 +13,7 @@
 
   #top.section-top
     .container
-      .pull-left= link_to "Sign up for the newsletter >", "signup_news"
+      .pull-left= link_to "Sign up for the newsletter", "signup_news"
       .pull-right.login
         = link_to "Sign in", "signin", :class => 'btn btn-small'
         - ['f', 'g', 't'].each do |p|
