--- a/site/app/subsites/status/views/css/style.haml
+++ b/site/app/subsites/status/views/css/style.haml
@@ -9,23 +9,24 @@
     background: -moz-linear-gradient(top, black, #666);
     background: linear-gradient(top, black, #666);
     color: white;
-    font-family: 'Liberation Sans', Verdana, Arial, Sans-serif;
+    font-family: "Helvetica Neue",Helvetica,"Liberation Sans",Arial,sans-serif;
     width: 40em;
     margin: 0 auto;
     padding: 3em;
   }
   a {
-    color: #bfdce8;
+    color: white;
   }
 
   h1 {
-    text-transform: uppercase;
-    -moz-text-shadow: 2px 2px 2px black;
+    text-transform: capitalize;
+    -moz-text-shadow: -1px -1px 0 black;
     -webkit-text-shadow: 2px 2px 2px black;
-    text-shadow: 2px 2px 2px black;
-    background: #c00;
+    text-shadow: -1px -1px 0 black;
+    box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
+    background: #CC0000;
     width: 22.5em;
-    margin: .5em -2em;
+    margin: 1em -2em 0.5em;
     padding: .3em 0 .3em 1.5em;
     position: relative;
   }
@@ -33,7 +34,7 @@
     content: '';
     width: 0;
     height: 0;
-    border: .5em solid #900;
+    border: .5em solid #91010B;
     border-left-color: transparent;
     border-bottom-color: transparent;
     position: absolute;
@@ -45,7 +46,7 @@
     content: '';
     width: 0;
     height: 0;
-    border: .5em solid #900;
+    border: .5em solid #91010B;
     border-right-color: transparent;
     border-bottom-color: transparent;
     position: absolute;
@@ -54,8 +55,8 @@
     z-index: -1000;
   }
   h2 { 
-    text-transform: uppercase; 
     margin: 2em 0 .5em;
+    border-bottom: 1px solid #999;
   }
 
   pre {
@@ -75,3 +76,29 @@
     list-style-type: none;
     padding: .5em 0;
   }
+
+  .brand {
+    display: block;
+  }
+  .brand .brand-image {
+    float: left;
+  }
+  .brand .brand-text {
+    float: left;
+    font-size: 24px;
+    line-height: 24px;
+    padding: 4px 0;
+    color: white;
+    text-transform: uppercase;
+  }
+
+  .brand:before,
+  .brand:after {
+    content: ' ';
+    display: table;
+  }
+  .brand:after {
+    clear: both;
+  }
+
+
