--- a/site/app/subsites/status/views/layout.haml
+++ b/site/app/subsites/status/views/layout.haml
@@ -20,12 +20,12 @@
       }
       h1.error { background-color: #c00 }
       h1.error:before { 
-        border: .5em solid #900;
+        border: .5em solid #91010b;
         border-left-color: transparent;
         border-bottom-color: transparent;
       }
       h1.error:after { 
-        border: .5em solid #900;
+        border: .5em solid #91010b;
         border-right-color: transparent;
         border-bottom-color: transparent;
       }
@@ -47,7 +47,12 @@
       }
 
   %body
-    %img(alt='OpenShift Logo' src="#{haml :'images/logo'}")
+    %a.brand{:href => '/'}
+      %img.brand-image(alt='' src="#{haml :'images/logo'}")
+      .brand-text
+        %strong> Open
+        Shift
+
     = yield
 
     %script(src="https://www.google.com/jsapi")
