--- a/site/app/views/site/recover.html.haml
+++ b/site/app/views/site/recover.html.haml
@@ -4,14 +4,15 @@
   .ribbon-content Reset your password
   .ribbon-left
 
-= form_tag(user_request_password_reset_path, :class => 'form-horizontal') do
-  %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? :redirectUrl : '/app/new/recover_success') }
-  %fieldset
-    .control-group
-      %label.control-label{:for => 'email_input'}
-        Email
-      .controls
-        %input{:type => "email", :required => true, :name => "email",  :id => "email_input"}
-    .form-actions
-      %input(type="submit" value="Reset Password" class="btn")
+#password-reset-form
+  = form_tag(user_request_password_reset_path, :class => 'form-horizontal') do
+    %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? :redirectUrl : '/app/new/recover_success') }
+    %fieldset
+      .control-group
+        %label.control-label{:for => 'email_input'}
+          Email
+        .controls
+          %input{:type => "email", :required => true, :name => "email",  :id => "email_input"}
+      .form-actions
+        %input(type="submit" value="Reset Password" class="btn")
 
