--- a/site/app/views/console/help.html.haml
+++ b/site/app/views/console/help.html.haml
@@ -52,7 +52,8 @@
       %strong Want to explore our platform?
     %p #{link_to 'The User Guide', user_guide_url} is the first destination for new developers and is our most-accessible reference.
     %p Our technology highlight pages bring together what you need to know - #{link_to 'JBoss', jboss_resources_url} and #{link_to 'MongoDB', mongodb_resources_url} are up now, with more to come.
-    %p For some great technology dives #{link_to 'see our Videos page', videos_url}. Some of our favorites are below.
+    %p For some great technology dives #{link_to 'see our Videos page', videos_url}.
+    -# Some of our favorites are below.
 
   .span3
     %h2 Troubleshoot
@@ -73,7 +74,7 @@
     %p Follow us on Twitter at #{link_to '#openshift', openshift_twitter_url} or read the #{link_to 'OpenShift blog', openshift_blog_url}.
     %p If you've found a real humdinger of a problem with the console, site, or community - #{link_to 'file a bug', open_bug_url, :target => '_blank' } and we'll try to make it right.
 
-%section.row
+-#%section.row
   .span12
     %h2 Videos
     %ul.thumbnails
