Make create app a button

--- a/site/app/views/console/help.html.haml
+++ b/site/app/views/console/help.html.haml
@@ -38,7 +38,7 @@
     %h2 Create
     %p
       %strong Just starting with OpenShift?
-    %p Get your first application up off the ground through the #{link_to 'app creation wizard', application_types_path}.
+    %p Get your first application up off the ground through the application creation wizard.  #{link_to 'Create an app now', application_types_path, :class => 'btn btn-success'}
     %p If you prefer the command line, #{link_to 'our Quickstart page', quickstart_path} will help you install the client tools, create your application, and make your first change.
     %p 
       Our #{link_to 'GitHub page', openshift_github_url} has tutorials for creating apps based many different technologies like 
