cleanup odds and ends

--- a/site/app/stylesheets/_type.scss
+++ b/site/app/stylesheets/_type.scss
@@ -2,6 +2,9 @@ h1, h2, h3, h4, h5, .headline, .nav, .secondary, .section-top {
 	font-family: $headerFontFamily;
 	font-weight: normal;
 	}
+h1, h2, h3, h4, h5 {
+	color: #000;
+	}
 p {
 	margin: 5px 0 13px;
 	}
