--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -302,6 +302,10 @@ body.signup {
   margin: 0 auto 20px;
 }
 
+#nav .messaging + .action-call {
+  margin: -25px auto 20px;
+}
+
 @media (max-width: 979px) {
   #learn .action-call {
     font-size: 17px;
@@ -611,18 +615,35 @@ body.box .container, body.box .box { width: 550px; }
 
 /* Background */
 body > header {
-  background-color: #191919;
+  /* fallback */
+  background: #191919 url($transparentNoiseImageData);
   background-image:
     url('../images/comets.png'),
     url($transparentNoiseImageData);
   background-repeat:
     repeat-x,
     repeat;
+  min-height: 450px;
+}
+
+.messaging {
+  margin: 55px 0;
+  
+  .primary {
+    margin-bottom: 10px;
+  }
+  .secondary {
+    max-width: 790px;
+    margin: 0 auto;
+    font-family: $baseFontFamily;
+  }
+  h1, h2 { color: white; }
 }
 
 @media (max-width: 767px) {
   body > header {
     background: #191919 url($transparentNoiseImageData) repeat; 
+    min-height: 300px;
   }
 }
 
@@ -650,32 +671,39 @@ body.home > header {
   background-image:
     url('../images/diagonals-top.png'),
     url('../images/mts.png'), 
+    url('../images/stars.png'),
     url($transparentNoiseImageData),
     -moz-repeating-linear-gradient(110deg, #191919 0px, #191919 10px, #181818 10px, #181818 20px);
+  background-image:
+    url('../images/diagonals-top.png'),
+    url('../images/mts.png'), 
+    url('../images/stars.png'),
+    url($transparentNoiseImageData),
+    -webkit-repeating-linear-gradient(110deg, #191919 0px, #191919 10px, #171717 10px, #171717 20px);
+  background-image:
+    url('../images/diagonals-top.png'),
+    url('../images/mts.png'), 
+    url('../images/stars.png'),
+    url($transparentNoiseImageData),
+    -ms-repeating-linear-gradient(110deg, #191919 0px, #191919 10px, #181818 10px, #181818 20px);
+  background-image:
+    url('../images/diagonals-top.png'),
+    url('../images/mts.png'), 
+    url('../images/stars.png'),
+    url($transparentNoiseImageData),
+    repeating-linear-gradient(110deg, #191919 0px, #191919 10px, #181818 10px, #181818 20px);
   background-repeat:
     no-repeat,
-    repeat-x,
+    no-repeat,
+    repeat,
     repeat, 
     repeat;
   background-position:
     right bottom,
     center bottom,
+    center bottom,
     center bottom, 
     center bottom;
-}
-
-.home .messaging {
-  margin: 55px 0;
-  
-  .primary {
-    margin-bottom: 10px;
-  }
-  .secondary {
-    max-width: 790px;
-    margin: 0 auto;
-    font-family: $baseFontFamily;
-  }
-  h1, h2 { color: white; }
 }
 
 .home #buzz {
