--- a/site/app/views/login/show.html.haml
+++ b/site/app/views/login/show.html.haml
@@ -1,13 +1,24 @@
--# file: Login form
+- input_html = { :class => input_class } if defined? input_class
 
-- content_for :page_title do
-  Sign in to OpenShift
+%h1.ribbon
+  .ribbon-content Sign in to shift your App to the cloud
+  .ribbon-left
 
-%section.main
-  %header
-    %h1 
-      Sign In to OpenShift
-  
-  .content
-
-    = render :partial => 'signin_form'
+= form_tag(login_path, :class => 'form-horizontal') do
+  %input(type="hidden" value="✓" name="utf8")
+  %input{:type => "hidden", :value => form_authenticity_token, :name => "authenticity_token"}
+  %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? :redirectUrl : '/app/console') }
+  %input{:type => "hidden", :name => "errorUrl",  :value => (defined?(@errorUrl) ? :errorUrl : '/app/new/signup') }
+  %fieldset
+    .control-group
+      %label.control-label{:for => 'login_input'}
+        Email
+      .controls
+        %input{:type => "email", :required => true, :placeholder => 'Your redhat.com or RHN account', :value => session[:confirm_login] ? session[:confirm_login] : '', :name => "login",  :id => "login_input"}
+    .control-group
+      %label.control-label{:for => 'pwd_input'}
+        Password
+      .controls
+        %input(id="pwd_input" type="password" name="password" autocomplete="off" required="true")
+    .form-actions
+      %input(type="submit" value="Sign in" class="btn")
