Branding: legal pages

--- a/site/app/views/user/new.html.haml
+++ b/site/app/views/user/new.html.haml
@@ -20,10 +20,10 @@
           = recaptcha_tags :ssl => true    
       .control-group
         By signing up you agree to the 
-        %a{:href => '#'} 
+        %a{:href => '/app/legal/site_terms'} 
           Terms of Service 
         and the
-        %a{:href => '#'} 
+        %a{:href => '/app/legal/openshift_privacy'} 
           Privacy Policy
       .form-actions
         = form.commit_button :label => 'Sign Up for OpenShift »'
