--- a/site/app/views/legal/show.html.haml
+++ b/site/app/views/legal/show.html.haml
@@ -3,23 +3,23 @@
 - content_for :page_title do
   Terms and Conditions
 
-%section.main
-  %header
-    %h1 Legal Terms Guide
+%h1.ribbon
+  .ribbon-content Legal Terms Guide
+  .ribbon-left
 
-  .content
-    %p
-      This page provides a list of the legal terms that apply to your use of OpenShift.
+.content
+  %p
+    This page provides a list of the legal terms that apply to your use of OpenShift.
 
-    %ul
-      %li
-        = link_to 'OpenShift Preview Services Agreement', legal_services_agreement_path
+  %ul
+    %li
+      = link_to 'OpenShift Preview Services Agreement', legal_services_agreement_path
 
-      %li
-        = link_to 'Acceptable Use Policy', legal_acceptable_use_path
+    %li
+      = link_to 'Acceptable Use Policy', legal_acceptable_use_path
 
-      %li
-        = link_to 'Privacy Policy', legal_openshift_privacy_path
-      
-      %li
-        = link_to 'Terms of Use', legal_site_terms_path
+    %li
+      = link_to 'Privacy Policy', legal_openshift_privacy_path
+    
+    %li
+      = link_to 'Terms of Use', legal_site_terms_path
