Branding: Flex page

--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -409,6 +409,7 @@ body.signup {
     top: -60px;
     right: -60px;
     text-align: center;
+    background: url('../images/events-bubble.png') no-repeat top left;
 
     > .one {
       margin-top: 30px;
