--- a/site/app/views/product/express.html.haml
+++ b/site/app/views/product/express.html.haml
@@ -5,7 +5,7 @@
         Shift your 
         %strong#technology-rotate App
         to the Cloud
-      %h2.secondary Start your journey into the cloud with the answers you need.
+      %h2.secondary OpenShift Express will give you a fast on-ramp to the Cloud. 
 
 %h1.ribbon
   .ribbon-content What is OpenShift Express?
@@ -13,7 +13,8 @@
   
 %h2
   OpenShift Express will give you a fast on-ramp to the Cloud. 
-  Get <strong>Java</strong>, <strong>Ruby</strong>, <strong>PHP</strong>, <strong>Perl</strong> and <strong>Python</strong> apps in the cloud with the command-line and Git in just a few minutes. 
+  Get <strong>Java</strong>, <strong>Ruby</strong>, <strong>PHP</strong>, <strong>Perl</strong> and 
+  <strong>Python</strong> apps in the cloud with the command-line and <strong>Git</strong> in just a few minutes. 
   
 .row
   .span4
