--- a/site/app/views/product/flex.html.haml
+++ b/site/app/views/product/flex.html.haml
@@ -5,7 +5,7 @@
         Shift your 
         %strong#technology-rotate App
         to the Cloud
-      %h2.secondary Start your journey into the cloud with the answers you need.
+      %h2.secondary OpenShift Flex is a browser-based platform-as-a-service for Java and PHP applications with auto-scaling, performance monitoring and application management capabilities built-in. 
 
 %h1.ribbon
   .ribbon-content What is OpenShift Flex?
@@ -13,9 +13,33 @@
   
 %h2
   OpenShift Flex is a browser-based platform-as-a-service for <strong>Java</strong> and <strong>PHP</strong> applications with auto-scaling, performance monitoring and application management capabilities built-in. 
-  %p
-    There's two ways to get started:
+%p
+  There's two ways to get started:
+  %p 
     Provide your Amazon EC2 credentials in order to authorize OpenShift Flex to deploy cloud servers on your behalf.
+  %p 
+    OR
+  .alert.alert-warning
+    Take advantage of Red Hat's <strong>free trial offer</strong>. The free trial includes <strong>30 days</strong>
+    or <strong>30 hours</strong> (whichever comes first) of free cloud resources from Amazon EC2.
+  %p.terms
+    The free trial is governed by the terms and conditions agreed to during the registration process for OpenShift.
+  %p.terms
+    Please Remember:
+    %ul.terms     
+      %li
+        OpenShift is in developer preview with no service level agreements.
+      %li
+        OpenShift should not be used for production purposes.
+      %li
+        At Red Hat's discretion, it may decommission the resources it granted as part of the free trial without notification, explanation, or backup.
+      %li
+        Users of OpenShift Flex are responsible for making backups of all their data
+      %li
+        After the expiration of the free trial, the resources and data on them will be deleted
+      %li
+        To maximize the time of your free trial we recommend that you stop your cluster when not utilizing it
+
   
 .row
   .span4
