--- a/site/public/stylesheets/home.css
+++ b/site/public/stylesheets/home.css
@@ -1,4 +1,3 @@
-/* line 3, ../../app/stylesheets/home.scss */
 body > header {
   background-image: url("../images/dark-gray-diagonal-noise.jpg");
   background-image: url("../images/diagonals-top.png"), url("../images/mts.png"), -webkit-gradient(radial, circle, 0, circle, 2, color-stop(0%, #ffffff), color-stop(50%, #ffffff), color-stop(100%, rgba(255, 255, 255, 0))), -webkit-gradient(radial, circle, 0, circle, 2, color-stop(0%, #ffffff), color-stop(100%, rgba(0, 0, 0, 0))), -webkit-gradient(radial, circle, 0, circle, 2, color-stop(0%, #eeeeee), color-stop(100%, rgba(0, 0, 0, 0))), -webkit-gradient(radial, circle, 0, circle, 2, color-stop(0%, #eeeeee), color-stop(100%, rgba(0, 0, 0, 0))), url("../images/dark-gray-diagonal-noise.jpg");
@@ -7,65 +6,57 @@ body > header {
   background-image: url("../images/diagonals-top.png"), url("../images/mts.png"), -o-radial-gradient(circle, #ffffff 0%, #ffffff 1px, rgba(255, 255, 255, 0) 2px), -o-radial-gradient(circle, #ffffff 0%, rgba(0, 0, 0, 0) 2px), -o-radial-gradient(circle, #eeeeee 0%, rgba(0, 0, 0, 0) 2px), -o-radial-gradient(circle, #eeeeee 0%, rgba(0, 0, 0, 0) 2px), url("../images/dark-gray-diagonal-noise.jpg");
   background-image: url("../images/diagonals-top.png"), url("../images/mts.png"), -ms-radial-gradient(circle, #ffffff 0%, #ffffff 1px, rgba(255, 255, 255, 0) 2px), -ms-radial-gradient(circle, #ffffff 0%, rgba(0, 0, 0, 0) 2px), -ms-radial-gradient(circle, #eeeeee 0%, rgba(0, 0, 0, 0) 2px), -ms-radial-gradient(circle, #eeeeee 0%, rgba(0, 0, 0, 0) 2px), url("../images/dark-gray-diagonal-noise.jpg");
   background-image: url("../images/diagonals-top.png"), url("../images/mts.png"), radial-gradient(circle, #ffffff 0%, #ffffff 1px, rgba(255, 255, 255, 0) 2px), radial-gradient(circle, #ffffff 0%, rgba(0, 0, 0, 0) 2px), radial-gradient(circle, #eeeeee 0%, rgba(0, 0, 0, 0) 2px), radial-gradient(circle, #eeeeee 0%, rgba(0, 0, 0, 0) 2px), url("../images/dark-gray-diagonal-noise.jpg");
-  background-repeat: no-repeat,     repeat-x,     repeat, repeat, repeat, repeat, repeat;
-  background-size: auto,     auto,     457px 241px,     307px 151px,     167px 199px,     239px 257px,     auto;
+  background-repeat: no-repeat, repeat-x, repeat, repeat, repeat, repeat, repeat;
+  background-size: auto, auto, 457px 241px, 307px 151px, 167px 199px, 239px 257px, auto;
   background-position: right bottom, center bottom, left top, -157px center, 89px 97px, 43px 31px, center bottom;
 }
 
-/* line 35, ../../app/stylesheets/home.scss */
 .messaging {
   margin: 55px 0;
 }
-/* line 38, ../../app/stylesheets/home.scss */
 .messaging .primary {
   margin-bottom: 10px;
 }
-/* line 41, ../../app/stylesheets/home.scss */
 .messaging .secondary {
   max-width: 790px;
   margin: 0 auto;
-  font-family: Liberation Sans, Helvetica Neue, Helvetica, Arial, Sans-serif;
 }
-/* line 46, ../../app/stylesheets/home.scss */
 .messaging h1, .messaging h2 {
   color: #bbb;
 }
 
-/* line 49, ../../app/stylesheets/home.scss */
+#learn h4 {
+  color: #000;
+}
+
 #buzz {
   background-color: #181919;
   background-image: url("../images/diagonals-bottom.png"), url("../images/tiny-panda.png"), url("../images/mts-bottom.png");
   background-repeat: no-repeat, no-repeat, repeat-x;
-  background-position: left top,     50px bottom,     center bottom;
+  background-position: left top, 50px bottom, center bottom;
 }
-/* line 61, ../../app/stylesheets/home.scss */
 #buzz .column-buzz {
   background: black url("../images/black-noise.png");
   margin: 0 80px;
 }
 
 @media (max-width: 767px) {
-  /* line 68, ../../app/stylesheets/home.scss */
   body > header {
     background: url("../images/dark-gray-diagonal-noise.jpg") repeat;
   }
 
-  /* line 72, ../../app/stylesheets/home.scss */
   .messaging {
     margin: 0;
   }
 
-  /* line 76, ../../app/stylesheets/home.scss */
   #buzz {
     background-image: none;
   }
-  /* line 78, ../../app/stylesheets/home.scss */
   #buzz .column-buzz {
     background-image: none;
     margin: 0;
   }
 }
-/* line 85, ../../app/stylesheets/home.scss */
 #nav {
   background-color: transparent;
   background-image: none;
