--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -1,61 +1,92 @@
-- content_for :page_title do
-  Cloud Platform
+- content_for :page_title, 'What is OpenShift?'
+- content_for :nav_class, ' lift-counter'
+- content_for :header do
+  .messaging
+    .container
+      .primary.headline
+        Shift your App to the Cloud
+      .secondary
+        Start your journey into the cloud with the answers you need.
+
+  = take_action new_web_user_path, 'Sign up to try <strong>OpenShift</strong>'
+
+%h1.ribbon
+  .ribbon-content What is OpenShift?
+  .ribbon-left
+
+%section
+  :markdown
+    OpenShift is Red Hat's Cloud Computing Platform-as-a-Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
+
+    ![OpenShift PaaS Illustration](/app/images/overview-paas.png)
+
+    ## Code on.
+
+    For a Developer to use OpenShift to take advantage of the power and elasticity of the Cloud, they need only do the following:
+
+    1. Create an "Application" in OpenShift (With the command-line or via their IDE)
+    2. Code the application (whether in Vi, Eclipse, Orion or whatever)
+    3. Push the application code to OpenShift (again, with a command or from their IDE)
+
+    Here's an example of the command-line approach (in this case the application was already coded and resident in the github repository):
+
+        //Create App
+        rhc-create-app –a twt -t wsgi-3.2
+
+        //Add MongoDB NoSQL Database
+        rhc-ctl-app -a twt -e add-mongodb-2.0
+
+        //Add Upstream Repo
+        cd twt
+        git remote add upstream -m master git://github.com/openshift/openshift-twt-mongo-demo.git
+        git pull -s recursive -X theirs upstream master
+
+        //Push Repo
+        git push
+
+        //Enjoy!
+        Http://twt-$yourlogin.rhcloud.com
+
+    That's all there is to it.  Simple, right?
+
+  %section= link_to 'Read more about getting started', getting_started_path, :class => 'action-more'
   
-- content_for :javascripts do
-  = javascript_include_tag "/app/javascripts/twitter.js"
-  = javascript_include_tag "/app/javascripts/products.js"
-  
-- auth_class = logged_in? ? 'authorized' : 'unauthorized'
-- prev_login_class = (!logged_in? and previously_logged_in?) ? 'prev_login' : ''
 
--# Product overview view
-%section#product_overview{ :class => "#{auth_class} #{prev_login_class} main"}
-  .info
-    %ul.content
-      %li#express.product_box.express
-        %h2
-          = link_to 'Express', express_path
+  .row
+    .span6
+      :markdown
+        ## Code anything.
+
+        OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.JS, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  
         
-        .content
-          %p.summary
-            %strong
-              Our shared cloud solution.
-          %p
-            Express is a free, cloud-based application platform for Java, Perl, PHP, Python, and Ruby applications. It's super-simple—your development environment is also your deployment environment: <code>git push</code>, and you're in the cloud!
-          
-          - if logged_in? and has_access? :express
-            = link_to 'Open control panel ▸', control_panel_path, :class => 'more'
-          - else
-            = link_to 'Compare features ▸', features_path, :class => 'more'
-      
-      %li#flex.product_box.flex
-        %header
-          %h2
-            = link_to 'Flex', flex_path
+        In addition to this flexible, no-lock-in, language approach, OpenShift supports all the popular frameworks that make a developer's life easier including everything from Spring, to Rails, to Play.  OpenShift is designed to allow Developers to work the way they want to work by giving them the languages, frameworks and tools they need for fast and easy application development.
+        ![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)
+
+    .span6
+      :markdown
+        ## Blow the doors off your expectations
+
+        Once you have your application running in the Cloud, the next thing to worry about is how it is going to handle the massive amount of usage it gets when it goes viral.  Well, no worries here.  OpenShift has you covered.  OpenShift provides both automatic and manual scaling of the resources that are supporting your application so that it will be able to service any volume of activity that you can dream of.  This is one of the sweet benefits of OpenShift PaaS…  you don't need to worry about any infrastructure or middleware issues like administration, tuning, or scaling.  OpenShift handles this for you.  
         
-        .content
-          %p.summary
-            %strong
-              Our dedicated cloud solution.
-          %p
-            Get more control over your apps, or move your existing applications to the cloud with ease! Flex is a dedicated cloud solution that provides everything you need to easily scale, provision, deploy, and monitor your applications.
-          
-          - if logged_in? and has_access? :express
-            = link_to 'Open control panel ▸', '/flex', :class => 'more'
-          - else
-            = link_to 'Compare features ▸', features_path, :class => 'more'
-            
-  #user_box
-    .content
-      - unless logged_in?
-        - if previously_logged_in?
-          %h2 Sign in to OpenShift
-          = render 'login/signin_form'
-        - else
-          %h2 Don't have an OpenShift account?
-          = link_to 'Create account', '/app/user/new/express', :class => 'button sign_up'
-          = link_to '...or sign in', login_path, :class => 'sign_in'
+        With Auto-Scaling, OpenShift can scale your application either Vertically by adding horsepower to the resources it is using, or Horizontally by adding additional instances of your application.  Both of these can happen automatically, or you can turn it on manually.  Either way, when your big idea takes off, OpenShift will allow it to soar.
 
-      = image_tag '/app/images/panda-plugged-in.png'
+        ![OpenShift Scaling](/app/images/overview-scaling.png)
 
-  = render 'buzz_vids'
+  :markdown
+    ## Under the Hood.
+
+    OpenShift by Red Hat is built on all open-source technologies (we are the leading open source company after all).  A decade of enhancements in these technologies contributed by the open source community has resulted in a set of rock-solid, bullet-proof, super-secure, and high-performing technology components that make OpenShift the best PaaS in the business.
+
+    ![OpenShift architecture diagram](/app/images/overview-architecture.png)
+
+    OpenShift is built on a foundation of Red Hat Enterprise Linux (RHEL).  Beyond being the leading and most respected Linux distro, RHEL provides some key capabilities that allow OpenShift to be stable, responsive, performant and secure. OpenShift leverages the multitenency and security models within RHEL to provide fine-grained and trusted control over the compute and storage resources available to any single OpenShift application.  SELinux allows OpenShift to "firewall" one user's application from another in order to insure security and survivability.  Taking a "multi-tenant in the OS" approach vs. a "multi-tenant hypervisor" approach allows OpenShift to scale resources much more quickly so that your application will never lack the horsepower that it needs.
+
+    Add on top of RHEL, a full selection of open source Languages, Frameworks, and Middleware combined with a "Cartridge" approach that allows users to very easily select the components that their applications need whether it is a NoSQL datastore or a Business Intelligence analytics engine.  For full details on the OpenShift technical architecture see this link <Arch Overview on Community if it is going to be there>.
+
+    ## Easy-peasy
+
+    The design and componentry of OpenShift really result in one thing for Developers:  Ease of Use without Worries.  OpenShift's mission is to make your job easier by taking care of all the messy IT aspects of app development and allowing you to focus on your job: Coding your Application and servicing your customers.
+
+    ![OpenShift ease of use](/app/images/overview-ease-of-use.png)
+
+%section= take_action new_web_user_path, 'Ready to scale in the cloud?', 'Sign up now'
