Branding: videos pages

--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -204,6 +204,12 @@ body.signup {
   }
 }
 
+.video-box {
+  text-align: center;
+  padding-bottom: 30px;
+  
+}
+
 @media (max-width: 979px) {
   .messaging {
     .primary {
