--- a/site/app/views/video/show.html.haml
+++ b/site/app/views/video/show.html.haml
@@ -6,19 +6,18 @@
 - content_for :stylesheets do
   = stylesheet_link_tag '/app/stylesheets/projekktor_maccaco.css'
 
-
 - content_for :javascripts do
   = javascript_include_tag '/app/javascripts/projekktor.min.js'
   = javascript_include_tag '/app/javascripts/video.js'
 
-%section.main
-  %header
-    %h1
-      = @title
+%h1.ribbon
+  .ribbon-content= @title
+  .ribbon-left
+
+.content
+  .video-box
+    %video.projekktor{ :poster => "#{request.protocol}www.redhat.com/g/video_stills/#{@filename}.png", :height => "590", :width => "100%"}
     
-    .content
-      %video.projekktor{ :poster => "#{request.protocol}www.redhat.com/g/video_stills/#{@filename}.png", :height => "385", :width => "640"}
-      
-        %source{ :src => "#{request.protocol}www.redhat.com/v/mp4/#{@filename}.mp4", :type=>"video/mp4"}
-      
-        %source{ :src => "#{request.protocol}www.redhat.com/v/ogg/#{@filename}.ogg", :type=>"video/ogg"}
+      %source{ :src => "#{request.protocol}www.redhat.com/v/mp4/#{@filename}.mp4", :type=>"video/mp4"}
+    
+      %source{ :src => "#{request.protocol}www.redhat.com/v/ogg/#{@filename}.ogg", :type=>"video/ogg"}
