--- a/site/app/views/partner/show.html.haml
+++ b/site/app/views/partner/show.html.haml
@@ -3,66 +3,65 @@
 - content_for :page_title do
   Partnership with #{@partner.name}
 
-%section.main
-  %header
-    %h1
-      = @partner.name
-  
-  .content
-    /Logo
-    #logo
-      = link_to @partner.url do
-        = image_tag "/app/images/partners/#{@partner.logo}"
-    
-    /Contact information
-    #contact
-      :plain
-        #{@partner.contact}
-    
-    /Summary
-    #summary
-      = @partner.summary
-        
-    
-    #solution_information
-      /Quote
-      #quote
-        %blockquote
-          = @partner.quote
-        %cite
-          = @partner.quote_attr
-      
-    /Ecosystem Diagram
-    #diagram
-      = image_tag "/app/images/partners/ecosystem/#{@partner.category}.png"
-    
-    /List of advantages
-    #advantage
-      %h4 
-        Advantages of #{@partner.name}
-        %br
-        for OpenShift Developers
-      %ul
-        - @partner.advantage.each do |adv|
-          %li
-            = adv
-            
-    /Solution description
-    #description
-      %h4 Solution Description
-      :plain
-        #{@partner.description}
-      
-    /Availability
-    #availability
-      %h4 Availability
-      %p
-        = @partner.availability
-            
-    /Link back to overview page
-    #partner_overview
-      %p
-        Want to learn about more OpenShift partners?
-      = link_to 'Return to the OpenShift Partners overview >', partners_path
+%h1.ribbon
+  .ribbon-content= @partner.name
+  .ribbon-left
 
-    = render 'join'
+.content
+  /Logo
+  #logo
+    = link_to @partner.url do
+      = image_tag "/app/images/partners/#{@partner.logo}"
+  
+  /Contact information
+  #contact
+    :plain
+      #{@partner.contact}
+  
+  /Summary
+  #summary
+    = @partner.summary
+      
+  
+  #solution_information
+    /Quote
+    #quote
+      %blockquote
+        = @partner.quote
+      %cite
+        = @partner.quote_attr
+    
+  /Ecosystem Diagram
+  #diagram
+    = image_tag "/app/images/partners/ecosystem/#{@partner.category}.png"
+  
+  /List of advantages
+  #advantage
+    %h4 
+      Advantages of #{@partner.name}
+      %br
+      for OpenShift Developers
+    %ul
+      - @partner.advantage.each do |adv|
+        %li
+          = adv
+          
+  /Solution description
+  #description
+    %h4 Solution Description
+    :plain
+      #{@partner.description}
+    
+  /Availability
+  #availability
+    %h4 Availability
+    %p
+      = @partner.availability
+          
+  /Link back to overview page
+  #partner_overview
+    %p
+      Want to learn about more OpenShift partners?
+    = link_to 'Return to the OpenShift Partners overview >', partners_path
+
+  = render 'join'
