Branding: getting started page

--- a/site/app/views/layouts/site/_header.html.haml
+++ b/site/app/views/layouts/site/_header.html.haml
@@ -24,7 +24,7 @@
             %strong> Open
             Shift
       %ul.nav
-        %li.active= link_to "Learn More", "/app/new/overview"
+        %li.active= link_to "Learn More", "/app/getting_started"
         %li= link_to "Express", "/app/express"
         %li.divider &nbsp;
         %li= link_to "Flex", "/app/flex"
