--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -20,6 +20,8 @@
 
     ![OpenShift PaaS Illustration](/app/images/overview-paas.png)
 
+  %a{:name => 'code'}
+  :markdown
     ## Code on.
 
     For a Developer to use OpenShift to take advantage of the power and elasticity of the Cloud, they need only do the following:
@@ -54,6 +56,7 @@
 
   .row
     .span6
+      %a{:name => 'open'}
       :markdown
         ## Code anything.
 
@@ -63,6 +66,7 @@
         ![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)
 
     .span6
+      %a{:name => 'scale'}
       :markdown
         ## Blow the doors off your expectations
 
