--- a/site/app/views/user/new.html.haml
+++ b/site/app/views/user/new.html.haml
@@ -27,4 +27,6 @@
           Privacy Policy
       .form-actions
         = form.commit_button :label => 'Sign Up for OpenShift »'
+        or
+        %a{:href => '/app/login'} sign in if you have an account
             
