Branding: improved login page

--- a/site/app/views/layouts/site/_header_simple.html.haml
+++ b/site/app/views/layouts/site/_header_simple.html.haml
@@ -6,7 +6,7 @@
     .container
       -# Was .nav-collapse, has some issues
       .brand
-        = link_to "/app/new" do
+        = link_to root_path do
           .brand-image
           .brand-text
             %strong> Open
