Branding: fixed broken images, adjust routes for the good of SEO

--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -18,7 +18,7 @@
   :markdown
     OpenShift is Red Hat's Cloud Computing Platform-as-a-Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
 
-    ![OpenShift PaaS Illustration](/app/images/overview-paas.png)
+    <!--![OpenShift PaaS Illustration](/app/images/overview-paas.png)-->
 
   %a{:name => 'code'}
   :markdown
@@ -47,7 +47,7 @@
         git push
 
         //Enjoy!
-        Http://twt-$yourlogin.rhcloud.com
+        http://twt-$yourlogin.rhcloud.com
 
     That's all there is to it.  Simple, right?
 
@@ -63,7 +63,7 @@
         OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.JS, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  
         
         In addition to this flexible, no-lock-in, language approach, OpenShift supports all the popular frameworks that make a developer's life easier including everything from Spring, to Rails, to Play.  OpenShift is designed to allow Developers to work the way they want to work by giving them the languages, frameworks and tools they need for fast and easy application development.
-        ![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)
+        <!--![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)-->
 
     .span6
       %a{:name => 'scale'}
@@ -74,14 +74,14 @@
         
         With Auto-Scaling, OpenShift can scale your application either Vertically by adding horsepower to the resources it is using, or Horizontally by adding additional instances of your application.  Both of these can happen automatically, or you can turn it on manually.  Either way, when your big idea takes off, OpenShift will allow it to soar.
 
-        ![OpenShift Scaling](/app/images/overview-scaling.png)
+        <!--![OpenShift Scaling](/app/images/overview-scaling.png)-->
 
   :markdown
     ## Under the Hood.
 
     OpenShift by Red Hat is built on all open-source technologies (we are the leading open source company after all).  A decade of enhancements in these technologies contributed by the open source community has resulted in a set of rock-solid, bullet-proof, super-secure, and high-performing technology components that make OpenShift the best PaaS in the business.
 
-    ![OpenShift architecture diagram](/app/images/overview-architecture.png)
+    <!--![OpenShift architecture diagram](/app/images/overview-architecture.png)-->
 
     OpenShift is built on a foundation of Red Hat Enterprise Linux (RHEL).  Beyond being the leading and most respected Linux distro, RHEL provides some key capabilities that allow OpenShift to be stable, responsive, performant and secure. OpenShift leverages the multitenancy and security models within RHEL to provide fine-grained and trusted control over the compute and storage resources available to any single OpenShift application.  SELinux allows OpenShift to "firewall" one user's application from another in order to insure security and survivability.  Taking a "multi-tenant in the OS" approach vs. a "multi-tenant hypervisor" approach allows OpenShift to scale resources much more quickly so that your application will never lack the horsepower that it needs.
 
@@ -91,6 +91,6 @@
 
     The design and componentry of OpenShift really result in one thing for Developers:  Ease of Use without Worries.  OpenShift's mission is to make your job easier by taking care of all the messy IT aspects of app development and allowing you to focus on your job: Coding your Application and servicing your customers.
 
-    ![OpenShift ease of use](/app/images/overview-ease-of-use.png)
+    <!--![OpenShift ease of use](/app/images/overview-ease-of-use.png)-->
 
 %section= take_action new_web_user_path, 'Ready to scale in the cloud?', 'Sign up now'
