Fixed login redirect bug

--- a/site/app/views/login/show.html.haml
+++ b/site/app/views/login/show.html.haml
@@ -7,7 +7,7 @@
 = form_tag(login_path, :class => 'form-horizontal') do
   %input(type="hidden" value="✓" name="utf8")
   %input{:type => "hidden", :value => form_authenticity_token, :name => "authenticity_token"}
-  %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? :redirectUrl : '/app/console') }
+  %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? @redirectUrl : '/app/console') }
   %input{:type => "hidden", :name => "errorUrl",  :value => (defined?(@errorUrl) ? :errorUrl : '/app/new/signup') }
   %fieldset
     .control-group
